@@ -1,5 +1,9 @@
 2014-03-08 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
+	* aprx.h, beacon.c, digipeater.c, parse_aprs.c, telemetry.c,
+	  timercmp.c, ttyreader.c:
+	     Fix all things flagged at CFLAGS="-g -O2 -Wall".
+
 	* configure.in, config.h.in, aprx.c:
 	    Autoconf test for <sys/wait.h>, and include if available.
 
